Added the Remove function, and added public/private to versions

--- a/Download/Views/Product/Delete.cshtml
+++ b/Download/Views/Product/Delete.cshtml
@@ -7,7 +7,7 @@
 <div style="background-color: rgba(255, 255, 255, 0.30)">
     <h3>Are you sure you want to delete @Model.ProductName?</h3>
     <hr />
-
+    <h4>This will Delete the item perminately, if you wish to get rid of this product without perminately deleteing it, use the remove button</h4>
 
     @using (Html.BeginForm())
     {
