--- a/Download/Views/Product/AddVersion.cshtml
+++ b/Download/Views/Product/AddVersion.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewBag.Title = "AddVersion";
+    var per = (IEnumerable<SelectListItem>)ViewData["permissions"];
 }
 
 
@@ -54,6 +55,13 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Add Version" class="btn btn-default" /><br />
+            </div>
+        </div>
+                <div class="form-group">
+            @Html.LabelFor(model => model.VersionStatus, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("VStatus", per);
+                @Html.ValidationMessageFor(model => model.VersionStatus)
             </div>
         </div>
 
