--- a/Download/Views/Product/Create.cshtml
+++ b/Download/Views/Product/Create.cshtml
@@ -3,6 +3,8 @@
 
 @{
     ViewBag.Title = "Create";
+    var per = (IEnumerable<SelectListItem>)ViewData["permissions"];
+
 }
 
 <h2>Create</h2>
@@ -62,7 +64,13 @@
                     </div>
                 </fieldset>
             </div>
-        
+        <div class="form-group">
+            @Html.LabelFor(model => model.VersionStatus, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("VStatus", per);
+                @Html.ValidationMessageFor(model => model.VersionStatus)
+            </div>
+        </div>
     
                 
                  <div class="form-group">
