--- a/Download/Views/Product/Display.cshtml
+++ b/Download/Views/Product/Display.cshtml
@@ -6,6 +6,7 @@
     var path = ViewData["ReadMe"];
     int i = 0;
     var file = ViewData["Content"];
+    var search = ViewData["search"];
 }
 
 <h2>@Model.ProductName</h2>
@@ -106,5 +107,5 @@
     </div>
 <br />
 <p>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { searchString = search })
 </p>
