--- a/Download/Views/Product/Edit.cshtml
+++ b/Download/Views/Product/Edit.cshtml
@@ -60,7 +60,7 @@
                 }
                 <td>
                     @Html.ActionLink("Edit", "EditVersion", new { id = version.VersionId }) |
-                    @Html.ActionLink("Delete", "DeleteVersion", new { id = version.VersionId })
+                    @Html.ActionLink("Remove", "RemoveVersion", new { id = version.VersionId })
                 </td>
                 </tr>
                     
