--- a/Download/Views/Product/Index.cshtml
+++ b/Download/Views/Product/Index.cshtml
@@ -30,7 +30,7 @@
     <br />
     <div class="body-content; text-muted" style="font-size: 20px">
         Use the search to find the product you want, or
-        do a blank search to browse through all availiable
+        do a blank search to browse through all available
         products
     </div>
     <br />
