Added comments and saved most recent search

--- a/Download/Views/Account/Manage.cshtml
+++ b/Download/Views/Account/Manage.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewBag.Title = "Manage Account";
 }
-
+@*Default view*@
 <h2>@ViewBag.Title.</h2>
 
 <p class="text-success" style="background-color: rgba(255, 255, 255, 0.40)">@ViewBag.StatusMessage</p>
