--- a/Download/Views/Account/_ChangePasswordPartial.cshtml
+++ b/Download/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNet.Identity
 @model Download.Models.ManageUserViewModel
+           @*Default view*@
 
 <p>You're logged in as <strong>@User.Identity.GetUserName()</strong>.</p>
 
