--- a/Download/Views/Product/RemoveVersion.cshtml
+++ b/Download/Views/Product/RemoveVersion.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "RemoveVersion";
     var search = ViewData["search"];
+
 }
 <h2>Remove</h2>
 <div style="background-color: rgba(255, 255, 255, 0.30)">
@@ -19,7 +20,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Remove Version" class="btn btn-danger" /> |
-            @Html.ActionLink("Back to Versions", "Edit", new { searchString = search, id = Model.ProductId })
+            @Html.ActionLink("Back to Versions", "Edit", new { id = Model.ProductId })
         </div>
     }
 </div>
