--- a/Download/Views/Account/ExternalLoginFailure.cshtml
+++ b/Download/Views/Account/ExternalLoginFailure.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Login Failure";
 }
-
+@*Default view*@
 <h2>@ViewBag.Title.</h2>
 <h3 class="text-error">Unsuccessful login with service.</h3>
