--- a/Download/Views/Account/_RemoveAccountPartial.cshtml
+++ b/Download/Views/Account/_RemoveAccountPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@model ICollection<Microsoft.AspNet.Identity.UserLoginInfo>
-
+@*Default view*@
 @if (Model.Count > 0)
 {
     <h4>Registered Logins</h4>
