--- a/Download/Views/Home/About.cshtml
+++ b/Download/Views/Home/About.cshtml
@@ -4,4 +4,6 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
+@*I'm not sure what to put in the about tab*@
+
 <p>Use this area to provide additional information.</p>
