--- a/Download/Views/Home/Contact.cshtml
+++ b/Download/Views/Home/Contact.cshtml
@@ -4,6 +4,8 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
+@*This is the default contact view. I'm not sure what I should put in here*@
+
 <address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
