--- a/Download/Views/Shared/_Layout.cshtml
+++ b/Download/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    @*This is mostly the default layout so I just kept it*@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Stonefin Downloads</title>
