--- a/Download/Views/Product/Display.cshtml
+++ b/Download/Views/Product/Display.cshtml
@@ -11,9 +11,9 @@
 }
 
 <h2>@Model.ProductName</h2>
-
+<hr />
 <div style="background-color: rgba(255, 255, 255, 0.35); border: 2px solid #ffffff" class="body-content">
-    <hr />
+
     <h3>Read Me</h3>
     <div class="col-md-12">
 
@@ -82,7 +82,9 @@
         }
     </div>
         <div>
+            @if (Model.Versions.Count() > 1) { 
             <h4>Archived Versions</h4>
+            }
             <div>
                 <table>
                     @foreach (var version in Model.Versions)
