--- a/Download/Views/Product/EditVersion.cshtml
+++ b/Download/Views/Product/EditVersion.cshtml
@@ -7,10 +7,7 @@
 
 <h2>Edit Version</h2>
 
-<asp:Content ID="Content1" ContentPlaceHolderID="TitleContent" runat="server">
-</asp:Content>
 
-<asp:Content ID="Content2" ContentPlaceHolderID="MainContent" runat="server">
     @using (Html.BeginForm("EditVersion", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
@@ -34,7 +31,7 @@
                     @if (arch.Exe != null)
                     {
                     <p>
-                        @arch.Exe <input type="file" name="FileUpload1" />
+                        (currently) @arch.Exe <input type="file" name="FileUpload1" />
                     </p>
                     }
                     else { 
@@ -51,7 +48,7 @@
                     @if (arch.Installer != null)
                     {
                     <p>
-                         @arch.Installer <input type="file" name="FileUpload2" />
+                        (currently) @arch.Installer <input type="file" name="FileUpload2" />
                     </p>
                     }
                     else
@@ -72,7 +69,7 @@
                     @if (arch.ReadMe != null)
                     {
                     <p>
-                        @arch.ReadMe <input type="file" name="FileUpload2" />
+                       (currently) @arch.ReadMe <input type="file" name="FileUpload2" />
                     </p>
                     }
                     else
@@ -88,7 +85,7 @@
             @Html.LabelFor(model => model.VersionStatus, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("VStatus", per)
-                @Html.ValidationMessageFor(model => model.VersionStatus)
+                @Html.ValidationMessageFor(model => model.VersionStatus)<br /><br />
             </div>
         </div>
         }
@@ -97,11 +94,13 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save Changes" class="btn btn-default" /><br /><br />
-                @Html.ActionLink("Back to Versions", "Edit", new { id = Model.ProductId })
+
             </div>
+            @Html.ActionLink("Back to Versions", "Edit", new { id = Model.ProductId })
         </div>
 
     }
+
 
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
