Adding more tweaks

--- a/Download/Views/Product/Display.cshtml
+++ b/Download/Views/Product/Display.cshtml
@@ -2,8 +2,8 @@
 @using MarkdownDeep;
 @{
     ViewBag.Title = "Display";
-    string filePath = System.Configuration.ConfigurationManager.AppSettings["Path"].ToString();
     int i = 0;
+    //contains the converted ReadMe file
     var file = ViewData["Content"];
 
 
