--- a/Download/Views/Product/Create.cshtml
+++ b/Download/Views/Product/Create.cshtml
@@ -10,7 +10,7 @@
 
 <h2>Create Product</h2>
 
-
+<div style="background-color: rgba(255, 255, 255, 0.23)">
     @using (Html.BeginForm("Create", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
@@ -84,7 +84,7 @@
         </div>
                      @Html.ActionLink("Back to List", "Index") <br />
     }
-
+    </div>
 
 @*Another Default thing*@
 
