--- a/Download/Views/Product/EditVersion.cshtml
+++ b/Download/Views/Product/EditVersion.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Edit Version</h2>
 
-
+<div style="background-color: rgba(255, 255, 255, 0.23); padding: 3px">
     @using (Html.BeginForm("EditVersion", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
@@ -82,7 +82,7 @@
             </fieldset>
         </div>
                 <div class="form-group">
-            @Html.LabelFor(model => model.VersionStatus, new { @class = "control-label col-md-2" })
+            @Html.Label("Version Permission", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("VStatus", per)
                 @Html.ValidationMessageFor(model => model.VersionStatus)<br /><br />
@@ -100,7 +100,7 @@
         </div>
 
     }
-
+</div>
 
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
