--- a/Download/Views/Product/EditVersion.cshtml
+++ b/Download/Views/Product/EditVersion.cshtml
@@ -31,12 +31,12 @@
                     @if (arch.Exe != null)
                     {
                     <p>
-                        (currently) @arch.Exe <input type="file" name="FileUpload1" />
+                        <b>(currently) @arch.Exe</b> <input type="file" name="FileUpload1" />
                     </p>
                     }
                     else { 
                     <p>
-                        Select an .exe: <input type="file" name="FileUpload1" />
+                        <b>Select an .exe:</b> <input type="file" name="FileUpload1" />
                     </p>
                     }
                 </div>
@@ -48,13 +48,13 @@
                     @if (arch.Installer != null)
                     {
                     <p>
-                        (currently) @arch.Installer <input type="file" name="FileUpload2" />
+                        <b>(currently) @arch.Installer</b> <input type="file" name="FileUpload2" />
                     </p>
                     }
                     else
                     {
                     <p>
-                        Select an Installer: <input type="file" name="FileUpload2" />
+                        <b>Select an Installer:</b> <input type="file" name="FileUpload2" />
                    </p>
                     }
                 </div>
@@ -69,13 +69,13 @@
                     @if (arch.ReadMe != null)
                     {
                     <p>
-                       (currently) @arch.ReadMe <input type="file" name="FileUpload2" />
+                       <b>(currently) @arch.ReadMe</b> <input type="file" name="FileUpload2" />
                     </p>
                     }
                     else
                     {
                      <p>
-                          Select a ReadMe: <input type="file" name="FileUpload2" />
+                          <b>Select a ReadMe:</b> <input type="file" name="FileUpload2" />
                     </p>
                     }
                 </div>
