--- a/Download/Views/Product/Edit.cshtml
+++ b/Download/Views/Product/Edit.cshtml
@@ -25,7 +25,7 @@
                 @Html.ValidationMessageFor(model => model.ProductName)
             </div>
         </div>
-        <table class="table table-hover" style="background-color: rgba(182, 255, 0, 0.25);">
+        <table style="background-color: rgba(182, 255, 0, 0.25);" class="table table-hover">
 
             <tr>
                 <th>
