--- a/Download/Views/Users/Index.cshtml
+++ b/Download/Views/Users/Index.cshtml
@@ -1,5 +1,7 @@
-﻿@model IEnumerable<Download.Models.UserViewModel>
+﻿@model PagedList.IPagedList<Download.Models.UserViewModel>
 @using Download.Models;
+@using PagedList.Mvc;
+
 
 
 @{
@@ -87,4 +89,17 @@
  
         </tr>
     }
+
 </table>
+@*Dispaly no pagers on intial display of the page becuase no products are shown*@
+@if (Model.PageCount > 0)
+{
+    <div>
+        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+        @*If there is zero or one page, no need to display page links*@
+        @if (Model.PageCount > 1)
+        {
+            @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+        }
+    </div>
+}
